Fixing lambda pattern in VertxUtil Removing possibly unnecessary add-opens for vertx